# truffle-billboard

./: .gitignore  Dockerfile  Makefile  README.md  billboard.c  docker-compose.yml  example.json  main.c  main.cc  truffle.config.mjs
assets/: billboard.js  editor.html  embed.html  style.css
backend/: CMakeLists.txt  main.cc
backend/controllers/: backend.cc  backend.h
controllers/: backend.cc  backend.h
frontend/: package-lock.json  package.json  svelte.config.js
frontend/src/lib/: Billboard.svelte  Billboard.ts  BillboardEditor.svelte  BillboardEditorList.svelte  BillboardGroup.svelte  BillboardItem.svelte
frontend/src/routes/embed/: +page.svelte
web/: billboard.js  editor.html  embed.html  style.css
